# nexus

./: .cursorignore  .env.tpl  .envrc.backup  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .venv  AGENTS.md  CLAUDE.md  Cables.md  Codecademy `pipenv` Setup.md  DIVERGENCE_TEST_ISSUE.md  ISSUES.md  LLM_team.txt  NEXUS_schema.sql  NEXUS_schema_guide.md  Procfile.dev  README.md  README_MEMNON.md  README_old.md  ROADMAP.md  TODO.md  TODO.txt  api_key_daemon.sh  api_request_prompt.json  backstory.md  blueprint_gaia.md  blueprint_logon.md  blueprint_lore.md  blueprint_memnon.md  blueprint_psyche.md  chunk_import.py  clear_test_env.sh  coding_prompt.md  create_character_aliases_view.sql  create_chunk_character_references_view.sql  cross_encoder_test_results.json  cursor_prompt.md  (+87 more)
QGIS/: temp_coordinates.gpkg
archive/: debug_import.py  generate_character_summaries.py  memnon_standalone.py  narrative_metadata_schema_0.json  narrative_metadata_schema_1.json  revised-addis-guidance-complete.md  test_ir_eval.py  test_ir_eval_2.py
config/: creative_benchmark.yaml
docs/: agent_workflow.md  apex_audition_lane_review.md  apex_audition_production_batch.md  api_limits.md  blueprint_gaia.md  blueprint_logon.md  blueprint_lore.md  blueprint_nemesis.md  blueprint_psyche.md  chunk_import.md  cli.md  code_review_post_pr34.md  color_scheme.md  data.xlsx  desktop.md  finish_line_milestones.md  geojson-integration.md  hybrid_search.md  image-gallery.md  lm_studio_sdk.md  maptab_rebuild_spec.md  nexus_ui_design.md  npc_knowledge_mechanics_research.md  openai_reasoning_models.md  openai_structured_outputs.md  orrery_audit_dashboard_notes.md  orrery_design_plan.md  orrery_faction_vocabulary.md  orrery_needs.md  orrery_packages.md  orrery_retrograde_spec.md  orrery_route_graph.md  orrery_slot2_backfill_plan.md  orrery_state_vocabulary.md  orrery_tag_vocabulary.md  post_pr34_review_actions.md  post_pr34_review_suggestions.md  query_framework.md  retrieval_query_bakeoff_2026_05_18.md  runtime.md  (+7 more)
echo/: BGE Fine Tuning.md  BGE_small_training_dataset.json  BGE_small_training_grist.txt  NEXUS_open_source_alternatives.md  fix_direnv_setup.sh  gui_mockup.docx  gui_mockup.rtf  manifest.json  narrative_metadata_schema.json  narrative_state.json  open_source.csv  open_source.xlsx  plan_prompt.md  psyche.py  settings.json  token_counter.py
echo_deprecated/: INTEGRATION.md  NightCityStories.db.sql  TESTING.md  agent_base.py  chromadb_api.py  cloud_corpus_render.py  coding_prompt.md  config_manager.py  db_sqlite.py  encode_chunks.py  error_log.txt  gaia_read.py  gaia_write.py  load_settings.py  lore.py  maestro.py  narrative_learner.py  nexus_legacy.db  package-lock.json  package.json  prove.py  psyche_mono.py  retrieved_context.json  setup_dev_environment.sh  setup_direnv.sh  setup_venv.sh  test_agent_communication.py  test_config_integration.py  tinker.py  training_dataset_snippet.txt  tsconfig.json
ir_eval/: DB_ISSUES.md  FILES_FOR_REVIEW.md  README.md  README_PG_MIGRATION.md  REVIEW_NOTES.md  TUI_design_document.md  __init__.py  auto_judge.md  db.py  evaluate_query_classifier.py  golden_queries.json  golden_queries.json.bak  golden_queries_backup.json  import_golden_queries.py  improve_query_classifier.py  improved_analyzer_implementation.py  ir_eval.db  ir_eval.db.bak  ir_eval.py  ir_eval_debug.py  ir_eval_sqlite.py  migrate_sqlite_to_postgres.py  pg_db.py  pg_schema.sql  qrels.json  query_classifier_evaluation.json  query_classifier_improvement.json  runner.py  test_comparison.py  test_db.py  test_pg_connection.py
migrations/: 001_baseline.sql  002_add_choice_columns.sql  003_add_layer_zone_drafts.sql  004_fix_global_variables_fk.sql  005_add_incubator_choice_object.sql  006_add_save_slots_model.sql  007_normalize_new_story_creator.sql  008_populate_mock_database.py  009_remove_assets_save_slots.sql  010_add_traits_table.sql  011_add_traits_confirmed.sql  012_add_wizard_choice_object.sql  014_add_2560d_4096d_embeddings.sql  015_add_ir_eval_v2_tables.sql  016_add_ir_eval_v1_query_tables.sql  017_add_judgment_justification.sql  018_narrative_chunks_column_comments.sql  019_add_incubator_choice_text.sql  020_drop_chunk_embeddings_0384d.sql  021_dedup_embedded_state.sql  022_compound_embedding_pk_lazy_tables.sql  023_orrery_schema.py  024_orrery_commit_pipeline.sql  025_orrery_package_library_vocab.py  026_relationship_valence_magnitude.sql  027_orrery_package_library_round2_vocab.py  028_orrery_sunhelm_needs.py  029_orrery_need_state_init_trigger.py  030_orrery_place_affordance_vocab.py  031_orrery_slot2_semantic_tag_vocab.py  032_orrery_interpersonal_needs.py  033_orrery_travel_work.py  034_orrery_concealment_surveillance_vocab.py  035_orrery_osm_route_graph.py  036_skald_inline_tag_runtime.py  037_orrery_tag_category_registry.py  038_orrery_tag_baseline_reconciliation.py  039_new_story_character_orrery_tags.py  040_storyteller_authorial_directives.sql  041_orrery_authority_model.sql  (+55 more)
mlx-gguf-testing/: ARCHITECTURE.md  MLX_vs_GGUF_Test_Summary.md  README.md  cleanup_models.py  long_context.txt  requirements.txt  run_tests.py  setup_environment.sh  test_token_counting.py
nexus/: __init__.py  __main__.py  cli.py
prompts/: character_chunk_ranker.json  character_chunk_ranker_alt.json  character_chunk_ranker_old.json  character_episode_ranker.json  faction_former.json  generate_psychology.json  map_builder.json  map_illustrator.json  populate_character_summaries.json  relationship_analyst.json  setting_night_city_stories.md  (+7 more)
ui/src-tauri/: Cargo.toml  build.rs  nexus.desktop.json  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+1421 files in other folders)
