[project]
name = "nexus"
version = "0.1.0"
description = ""
authors = [
    {name = "Neil Gordon Clark",email = "neilgordonclark@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-ai-slim[openai,anthropic]>=1.30.1,<1.31.0",
    "sqlalchemy>=2.0.25,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pgvector>=0.2.3,<0.3.0",
    "requests>=2.32.3,<3.0.0",
    "openai>=1.107.2,<2.0.0",
    "anthropic>=0.75.0,<1.0.0",
    "tiktoken>=0.12.0,<0.13.0",
    "numpy>=1.26.2,<2.0.0",
    "transformers (==4.51.3)",
    "sentence-transformers>=3.4.1,<4.0.0",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "torch (>=2.6.0,<3.0.0)",
    "chardet>=5.0.0,<6.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "tomlkit>=0.13.2,<1.0.0",
    "keyring (>=25.7.0,<26.0.0)",
    "protobuf (>=6.0.0,<7.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<26.0.0",
    "pytest>=8.3.5,<9.0.0",
    "mypy>=1.15.0,<2.0.0",
    "flake8>=7.3.0,<8.0.0"
]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
torch = {allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.2.0"
asyncpg = "^0.30.0"
pre-commit = "^3.5"
flake8 = "^7.3.0"
