[package]
name = "nexus-desktop"
version = "0.1.0"
description = "Native desktop shell for the NEXUS managed runtime"
authors = ["NEXUS contributors"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "nexus_desktop"
path = "src/lib.rs"

[[bin]]
name = "nexus-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-single-instance = "2.4.2"
url = "2.5"
