[package]
name = "nexus-desktop"
version = "0.1.0"
description = "Native desktop shell for the NEXUS managed runtime"
authors = ["NEXUS contributors"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "nexus_desktop"
path = "src/lib.rs"

[[bin]]
name = "nexus-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
dirs = "6.0.0"
minreq = { version = "3.0.0", features = ["https-rustls-probe", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-single-instance = "2.4.2"
url = "2.5"

[profile.release]
codegen-units = 1
lto = true
strip = true
